# dialogue-generator

./: .gitignore  README.md  config.json.example  pyproject.toml
dialogue-generator/: gen_dialog.py
